--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
     "pack": "webpack --display-modules"
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.3",
-    "@material-ui/icons": "^3.0.1",
-    "react": "16.5.0",
-    "react-dom": "16.5.0"
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "0.23.1",
-    "ts-loader": "^5.1.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "3.1.8"
+    "@babel/cli": "7.10.4",
+    "@babel/core": "7.10.4",
+    "@babel/node": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@types/react": "16.9.42",
+    "@types/react-dom": "16.9.8",
+    "awesome-typescript-loader": "5.2.1",
+    "css-loader": "3.6.0",
+    "html-webpack-plugin": "4.3.0",
+    "source-map-loader": "1.0.1",
+    "style-loader": "1.2.1",
+    "ts-loader": "8.0.0",
+    "typescript": "3.9.6",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   }
 }
